test/language/statements/using/syntax/using-invalid-for-using-of-of.js
// Copyright (C) 2011 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
esid: pending
description: >
    using: 'for (using of' is always interpreted as identifier 
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
for (using of of [1, 2, 3]) { }
